GEODE-10447: improve code for supporting JDK11 (#7882)